--- a/ystyle.css
+++ b/ystyle.css
@@ -16,7 +16,7 @@ body {
     justify-content: center;
 }
 
-header {
+main {
     width: 85%;
     height: 95%;
     border: 1px solid #fff;
@@ -25,7 +25,7 @@ header {
     overflow: hidden;
 }
 
-header .menu_side, .song_side {
+main .menu_side, .song_side {
     position: relative;
     width: 25%;
     height: 90%;
@@ -35,29 +35,29 @@ header .menu_side, .song_side {
     color: #fff;
 }
 
-header .song_side {
+main .song_side {
     width: 75%;
     background: #0b1320;
 }
 
-header .master_play {
+main .master_play {
     width: 100%;
     height: 10%;
     background: #111727;
     box-shadow: 0px 3px 8px #090f1f;
 }
 
-header .menu_side h1 {
+main .menu_side h1 {
     font-size: 20px;
     margin: 15px 0px 0px 20px;
     font-weight: 500;
 }
 
-header .menu_side .playlist {
+main .menu_side .playlist {
    margin: 40px 0px 0px 20px;
 }
 
-header .menu_side .playlist h4 {
+main .menu_side .playlist h4 {
     font-style: 14px;
     font-weight: 400;
     padding-bottom: 10px;
@@ -67,14 +67,14 @@ header .menu_side .playlist h4 {
     align-items: center;
     transition: .3s linear;
 }
-header .menu_side .playlist h4:hover {
+main .menu_side .playlist h4:hover {
     color: #fff;
 }
-header .menu_side .playlist h4 span{
+main .menu_side .playlist h4 span{
     position: relative;
     margin-right: 35px;
 }
-header .menu_side .playlist h4 span::before{
+main .menu_side .playlist h4 span::before{
     content: '';
     position: absolute;
     width: 4px;
@@ -84,29 +84,29 @@ header .menu_side .playlist h4 span::before{
     top: -4px;
     transition: .3s linear;
 }
-header .menu_side .playlist h4:hover span::before{
+main .menu_side .playlist h4:hover span::before{
     border: 2px solid #fff;
 }
-header .menu_side .playlist h4 .bi{
+main .menu_side .playlist h4 .bi{
     display: none;
 }
-header .menu_side .playlist .active{
+main .menu_side .playlist .active{
     color: #28f07b;
 }
-header .menu_side .playlist .active span{
+main .menu_side .playlist .active span{
     display: none;
 }
-header .menu_side .playlist .active .bi{
+main .menu_side .playlist .active .bi{
     display: none;
     margin-right: 20px;
 }
-header .menu_side .menu_song {
+main .menu_side .menu_song {
    width: 100%;
    height: 300px;
    /*border: 1px solid  #fff;*/
    margin-top: 40px;
 }
-header .menu_side .menu_song li{
+main .menu_side .menu_song li{
     position: relative;
     list-style-type: none;
     padding: 5px 0px 5px 20px;
@@ -116,40 +116,40 @@ header .menu_side .menu_song li{
     cursor: pointer;
     transition: .3s linear;
 }
-header .menu_side .menu_song li:hover{
+main .menu_side .menu_song li:hover{
     background: rgb(105, 105, 170,.1);
 }
-header .menu_side .menu_song li span{
+main .menu_side .menu_song li span{
    font-size: 12px;
    font-weight: 600;
    color: #4c5262;
 }
-header .menu_side .menu_song li img{
+main .menu_side .menu_song li img{
     width: 32px;
     height: 32px;
     margin-left: 25px;  
 }
-header .menu_side .menu_song li h5{
+main .menu_side .menu_song li h5{
     font-size: 11px;
     margin-left: 15px;
 }
-header .menu_side .menu_song li h5 .subtitle{
+main .menu_side .menu_song li h5 .subtitle{
     font-size: 9px;
     color: #4c5262;
 }
-header .menu_side .menu_song li .bi{
+main .menu_side .menu_song li .bi{
    position: absolute; 
    right: 15px;
    top: 6px;
    font-size: 16px;
 }
 
-header .master_play {
+main .master_play {
     display: flex;
     align-items: center;
     padding: 0px 20px;
 }
-header .master_play .wave{
+main .master_play .wave{
     width: 30px;
     height: 30px;
     /* border: 1px solid #fff; */
@@ -158,7 +158,7 @@ header .master_play .wave{
     align-items: flex-end;
     margin-right: 10px;
 }
-header .master_play .wave .wave1{
+main .master_play .wave .wave1{
     width: 3px;
     height: 10px;
     margin-right: 3px;
@@ -166,22 +166,22 @@ header .master_play .wave .wave1{
     background: #28f07b;
     animation: unset;
 }
-header .master_play .wave .wave1:nth-child(2){
+main .master_play .wave .wave1:nth-child(2){
     height: 13px;
     /* animation-delay: .4s; */
 }
-header .master_play .wave .wave1:nth-child(3){
+main .master_play .wave .wave1:nth-child(3){
     height: 8px;
     /* animation-delay: .8s; */
 }
 /* javascript class wave */
-header .master_play .active2 .wave1{
+main .master_play .active2 .wave1{
     animation: wave .5s linear infinite;
 }
-header .master_play .active2 .wave1:nth-child(2){
+main .master_play .active2 .wave1:nth-child(2){
     animation-delay: .4s;
 }
-header .master_play .active2 .wave1:nth-child(3){
+main .master_play .active2 .wave1:nth-child(3){
     animation-delay: .8s;
 }
 
@@ -198,31 +198,31 @@ header .master_play .active2 .wave1:nth-child(3){
 }
 
 
-header .master_play img {
+main .master_play img {
     height: 35px;
     width: 35px;
 }
-header .master_play h5 {
+main .master_play h5 {
     width: 130px;
     font-size: 13px;
     margin-left: 15px;
     color: #fff;
     line-height: 17px;
 }
-header .master_play h5 .subtitle{
+main .master_play h5 .subtitle{
     font-size: 11px;
     color: #4c5262;
 }
-header .master_play h5 .icon{
+main .master_play h5 .icon{
     font-size: 20px;
     color: #fff;
     margin: 0px 20px 0px 40px;
 }
-header .master_play h5 .icon .bi{
+main .master_play h5 .icon .bi{
     cursor: pointer;
     outline: none;
 }
-header .master_play h5 .icon .bi:nth-child(2){
+main .master_play h5 .icon .bi:nth-child(2){
     border: 1px solid rgb(105, 105, 170,.1);
     border-radius: 50%;
     padding: 1px 3px 0px 6px;
