--- a/ystyle.css
+++ b/ystyle.css
@@ -229,3 +229,49 @@ main .master_play h5 .icon .bi:nth-child(2){
     margin: 0px 5px;
     transition: .3s linear;
 }
+main .master_play span {
+    color: #fff;
+    width: 32px;
+    font-size: 11px;
+    font-weight: 400;
+}
+main .master_play #currentStart {
+    margin: 0px 0px 0px 20px;
+
+}
+
+main .master_play .bar {
+    position: relative;
+    width: 43%;
+    height: 2px;
+    background: rgb(105, 105, 170,.1);
+    margin: 0px 15 px 0px 10px;
+}
+main .master_play .bar .bar2{
+    position: absolute;
+    background: #28f07b;
+    width: 0%;
+    height: 100%;
+    top: 0;
+}
+main .master_play .bar .dot{
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    background: #28f07b;
+    border-radius: 50%;
+    left: 0%;
+    top: -1px;
+    transition: 1s linear;
+}
+main .master_play .bar .dot::before{
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border:1px solid #28f07b;
+    border-radius: 50%;
+    left: -6px;
+    top: -6px;
+    box-shadow: inset 0px 0px 3px #28f07b;
+}
