--- a/ystyle.css
+++ b/ystyle.css
@@ -275,3 +275,8 @@ main .master_play .bar .dot::before{
     top: -6px;
     box-shadow: inset 0px 0px 3px #28f07b;
 }
+.song_side__image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
