--- a/ystyle.css
+++ b/ystyle.css
@@ -102,7 +102,8 @@ main .menu_side .playlist .active .bi{
 }
 main .menu_side .menu_song {
    width: 100%;
-   height: 300px;
+   height: 563px;
+   overflow-y: auto;
    /*border: 1px solid  #fff;*/
    margin-top: 40px;
 }
