--- a/ystyle.css
+++ b/ystyle.css
@@ -102,7 +102,7 @@ main .menu_side .playlist .active .bi{
 }
 main .menu_side .menu_song {
    width: 100%;
-   height: 563px;
+   height: 555px;
    overflow-y: auto;
    /*border: 1px solid  #fff;*/
    margin-top: 40px;
@@ -280,4 +280,8 @@ main .master_play .bar .dot::before{
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+
+main .master_play .icon {
+     color: #ffffff;
 }
