--- a/ystyle.css
+++ b/ystyle.css
@@ -107,6 +107,20 @@ main .menu_side .menu_song {
    /*border: 1px solid  #fff;*/
    margin-top: 40px;
 }
+main .menu_side .menu_song::-webkit-scrollbar {
+    width: 4px;
+}
+
+
+main .menu_side .menu_song::-webkit-scrollbar-track {
+    border-radius: 5px;
+    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.25);
+}
+
+main .menu_side .menu_song::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: rgb(63, 63, 63);
+}
 main .menu_side .menu_song li{
     position: relative;
     list-style-type: none;
