--- a/ystyle.css
+++ b/ystyle.css
@@ -102,7 +102,7 @@ main .menu_side .playlist .active .bi{
 }
 main .menu_side .menu_song {
    width: 100%;
-   height: 514px;
+   height: 590px;
    overflow-y: auto;
    /*border: 1px solid  #fff;*/
    margin-top: 40px;
@@ -296,6 +296,6 @@ main .master_play .bar .dot::before{
     object-fit: cover;
 }
 
-main .master_play .icon {
-     color: #ffffff;
+main .master_play .symbol {
+    color: #ffffff;
 }
